# ComfyUI-Gemini-Prompt-Generator-JT

./: .gitignore  README.md  __init__.py  config.json  config.json.default  magifactory_prompt_generator_workflow.json  prompt_generator.py  pyproject.toml
Example_workflow/: Gemini-JT Prompt Generator.json
